# QtJsonSettings

./: CMakeLists.txt  LICENSE  README.md  qt_json_settings.cc  qt_json_settings.h  test_settings.cc
